--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Software Engineer. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Quincy MA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Learning Programming</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To create an application that every wants to use</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Houghs Neck</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Because I think its cool</p>
     </section>
 
     <footer id="footer">
